# org-context

./: .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0002_auth.py  0003_connector_state.py  0004_ops.py  730e5b7a2104_initial_schema.py
backend/keycloak/: realm-org-context.json
backend/scripts/: init-test-db.sql  start-api.sh  start-scheduler.sh  start-worker.sh
backend/seeds/: demo_data.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py  test_admin_api.py  test_agent_runs_api.py  test_auth.py  test_auth_oidc.py  test_conflicts_api.py  test_context_api.py  test_context_debt_api.py  test_dashboard.py  test_documents_api.py  test_evals_api.py  test_feedback_api.py  test_heatmaps_api.py  test_relationships_api.py  test_search_api.py  test_sources_api.py  test_system_info.py  test_user_management.py
backend/tests/integration/: test_acl_retrieval.py  test_cli_integration.py  test_compiler.py  test_conflicts.py  test_evals.py  test_ingestion_pipeline.py  test_live_sync.py  test_mcp_server.py  test_reindex.py  test_retrieval.py  test_search_cache.py  test_sync_runs.py
backend/tests/unit/: test_chunking.py  test_cli.py  test_compiler_units.py  test_connectors.py  test_connectors_gcal.py  test_connectors_gdrive.py  test_connectors_gmail.py  test_connectors_linear.py  test_connectors_notion.py  test_connectors_zendesk.py  test_embedding_providers.py  test_eval_scoring.py  test_google_auth.py  test_ingestion.py  test_intent.py  test_live_connectors.py  test_live_gcal.py  test_live_gdrive.py  test_live_gmail.py  test_live_linear.py  test_mmr.py  (+6 more)
(+279 files in other folders)
