[project]
name = "context-engine"
version = "0.1.0"
description = "Org Context Engineering Platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "pgvector>=0.3",
    "alembic>=1.13",
    "pydantic>=2",
    "pydantic-settings>=2.3",
    "redis>=5",
    "dramatiq[redis]>=1.17",
    "typer>=0.12",
    "structlog>=24",
    "httpx>=0.27",
    "mcp>=1.2",
    "langfuse>=2.50",
]

[project.scripts]
ctx = "context_engine.cli.main:app_entry"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_engine", "seeds"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "--cov=context_engine --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["context_engine"]
# SQLAlchemy's asyncpg dialect resumes awaited frames inside greenlets; without
# greenlet concurrency tracing, async endpoint bodies are invisible to coverage.
concurrency = ["thread", "greenlet"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
